refactor views and controllers

--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -5,24 +5,24 @@ index:
 country:
     path:      country/{name}
     defaults:  { _controller: AppBundle:Country:index }
-    requirements:
-        name: England|France|Albania|Austria|Belgium|Croatia|Czech|Germany|Hungary|Iceland|Ireland|Italy|Northern_Ireland|Poland|Portugal|Russia|Romania|Slovakia|Spain|Switzerland|Sweden|Turkey|Wales|Ukraine
+#    requirements:
+#        name: England|France|Albania|Austria|Belgium|Croatia|Czech|Germany|Hungary|Iceland|Ireland|Italy|Northern_Ireland|Poland|Portugal|Russia|Romania|Slovakia|Spain|Switzerland|Sweden|Turkey|Wales|Ukraine
 
 player:
     path:      player/{country}/{id}
     defaults:  { _controller: AppBundle:Player:index }
-    requirements:
+#    requirements:
 #        country: England|France|Albania|Austria|Belgium|Croatia|Czech|Germany|Hungary|Iceland|Ireland|Italy|Northern_Ireland|Poland|Portugal|Russia|Romania|Slovakia|Spain|Switzerland|Sweden|Turkey|Wales|Ukraine
-        id:  \d+
+#        id:  \d+
 
 coach:
-    path:      coach/{country}
+    path:      coach/{country}/{id}
     defaults:  { _controller: AppBundle:Coach:index }
-    requirements:
-        country: England|France|Albania|Austria|Belgium|Croatia|Czech|Germany|Hungary|Iceland|Ireland|Italy|Northern_Ireland|Poland|Portugal|Russia|Romania|Slovakia|Spain|Switzerland|Sweden|Turkey|Wales|Ukraine
+#    requirements:
+#        country: England|France|Albania|Austria|Belgium|Croatia|Czech|Germany|Hungary|Iceland|Ireland|Italy|Northern_Ireland|Poland|Portugal|Russia|Romania|Slovakia|Spain|Switzerland|Sweden|Turkey|Wales|Ukraine
 
 team:
     path:      team/{name}
     defaults:  { _controller: AppBundle:Team:index }
-    requirements:
-        name: England|France|Albania|Austria|Belgium|Croatia|Czech|Germany|Hungary|Iceland|Ireland|Italy|Northern_Ireland|Poland|Portugal|Russia|Romania|Slovakia|Spain|Switzerland|Sweden|Turkey|Wales|Ukraine
+#    requirements:
+#        name: England|France|Albania|Austria|Belgium|Croatia|Czech|Germany|Hungary|Iceland|Ireland|Italy|Northern_Ireland|Poland|Portugal|Russia|Romania|Slovakia|Spain|Switzerland|Sweden|Turkey|Wales|Ukraine
