--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "sensio/distribution-bundle": "~5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
-        "fzaninotto/faker": "1.5.0"
+        "fzaninotto/faker": "1.5.0",
+        "knplabs/knp-paginator-bundle": "^2.5"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
