--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -26,3 +26,7 @@ team:
     defaults:  { _controller: AppBundle:Team:index }
 #    requirements:
 #        name: England|France|Albania|Austria|Belgium|Croatia|Czech|Germany|Hungary|Iceland|Ireland|Italy|Northern_Ireland|Poland|Portugal|Russia|Romania|Slovakia|Spain|Switzerland|Sweden|Turkey|Wales|Ukraine
+
+generator:
+    path:      generator
+    defaults:  { _controller: AppBundle:Generator:index }
