--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "sensio/generator-bundle": "~3.0",
         "symfony/phpunit-bridge": "~2.7",
         "phpunit/phpunit": "~5.0",
-        "hautelook/alice-bundle": "^1.1"
+        "hautelook/alice-bundle": "^1.1",
+        "doctrine/doctrine-fixtures-bundle": "^2.3"
     },
     "scripts": {
         "post-install-cmd": [
