--- a/src/AppBundle/DataFixtures/ORM/Dev/coach.yml
+++ b/src/AppBundle/DataFixtures/ORM/Dev/coach.yml
@@ -1,5 +1,5 @@
-AppBundle\Entity\Player:
-  player_{1..70}:
+AppBundle\Entity\Coach:
+  coach_{1..20}:
     name: <name()>
     info: <text(200)>
     country: <country()>
