--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -3,30 +3,17 @@ index:
     defaults:  { _controller: AppBundle:Default:index }
 
 country:
-    path:      country/{name}
+    path:      country/{id}
     defaults:  { _controller: AppBundle:Country:index }
-#    requirements:
-#        name: England|France|Albania|Austria|Belgium|Croatia|Czech|Germany|Hungary|Iceland|Ireland|Italy|Northern_Ireland|Poland|Portugal|Russia|Romania|Slovakia|Spain|Switzerland|Sweden|Turkey|Wales|Ukraine
 
 player:
-    path:      player/{country}/{id}
+    path:      player/{id}
     defaults:  { _controller: AppBundle:Player:index }
-#    requirements:
-#        country: England|France|Albania|Austria|Belgium|Croatia|Czech|Germany|Hungary|Iceland|Ireland|Italy|Northern_Ireland|Poland|Portugal|Russia|Romania|Slovakia|Spain|Switzerland|Sweden|Turkey|Wales|Ukraine
-#        id:  \d+
 
 coach:
-    path:      coach/{country}/{id}
+    path:      coach/{id}
     defaults:  { _controller: AppBundle:Coach:index }
-#    requirements:
-#        country: England|France|Albania|Austria|Belgium|Croatia|Czech|Germany|Hungary|Iceland|Ireland|Italy|Northern_Ireland|Poland|Portugal|Russia|Romania|Slovakia|Spain|Switzerland|Sweden|Turkey|Wales|Ukraine
 
 team:
-    path:      team/{name}
+    path:      team/{id}
     defaults:  { _controller: AppBundle:Team:index }
-#    requirements:
-#        name: England|France|Albania|Austria|Belgium|Croatia|Czech|Germany|Hungary|Iceland|Ireland|Italy|Northern_Ireland|Poland|Portugal|Russia|Romania|Slovakia|Spain|Switzerland|Sweden|Turkey|Wales|Ukraine
-
-generator:
-    path:      generator
-    defaults:  { _controller: AppBundle:Generator:index }
